[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/ui/Ui.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Audio/04.mp3" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Audio/02.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scenes/reklama/rekl.png" type="Texture" id=4]
[ext_resource path="res://Assets/12.jpg" type="Texture" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Scenes/S12/jiggle_default.material" type="Material" id=7]
[ext_resource path="res://Scenes/Audio/03.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Audio/05.mp3" type="AudioStream" id=9]
[ext_resource path="res://Scenes/Audio/01.mp3" type="AudioStream" id=10]
[ext_resource path="res://Scenes/heart_particles/heart.png" type="Texture" id=11]
[ext_resource path="res://Scenes/S1/S00.gd" type="Script" id=13]
[ext_resource path="res://Scenes/SpringSimulation/SpringPoint.gd" type="Script" id=16]
[ext_resource path="res://Scenes/SpringSimulation/SpringSim.gd" type="Script" id=17]
[ext_resource path="res://Scenes/SpringSimulation/BasePosition.gd" type="Script" id=18]
[ext_resource path="res://Scenes/ui/arial_bolditalicmt.ttf" type="DynamicFontData" id=19]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 5 )

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="PlaneMesh" id=1]
subdivide_width = 64
subdivide_depth = 64

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 19 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.547486, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=9]
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Jiggle" type="Spatial"]
script = ExtResource( 13 )

[node name="SpringSim" type="Node2D" parent="."]
visible = false
script = ExtResource( 17 )
damping = 0.05
speed = 6.0
MAX_DISTANCE = 80.0

[node name="Camera2D" type="Camera2D" parent="SpringSim"]
position = Vector2( 464, 242 )
current = true
zoom = Vector2( 2, 2 )

[node name="BasePosition" type="Sprite" parent="SpringSim"]
position = Vector2( 512, 300 )
texture = ExtResource( 6 )
script = ExtResource( 18 )

[node name="SpringPoint" type="Sprite" parent="SpringSim"]
position = Vector2( 240, 192 )
texture = ExtResource( 6 )
script = ExtResource( 16 )
base_position = NodePath("../BasePosition")

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.80527, 0 )
projection = 1
current = true
size = 2.365

[node name="Body" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.486 )

[node name="Chest" type="MeshInstance" parent="Body"]
transform = Transform( 0.685032, 0, 0, 0, 1, 0, 0, 0, 1.18432, -0.011074, -0.453668, 0.490134 )
material_override = SubResource( 2 )
mesh = SubResource( 3 )

[node name="Breasts" type="MeshInstance" parent="Body"]
transform = Transform( 0.552316, 0, 0, 0, 1.19594, 0, 0, 0, 0.343036, -0.0129273, -0.389647, 0.858207 )
material_override = ExtResource( 7 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")

[node name="rekl" type="Node2D" parent="."]
visible = false
position = Vector2( -254, -1035 )
scale = Vector2( 2, 2 )

[node name="Sprite" type="Sprite" parent="rekl"]
position = Vector2( 352, 640 )
scale = Vector2( 1.08889, 1 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="rekl"]
margin_left = -6.0
margin_top = 590.0
margin_right = 724.0
margin_bottom = 647.0
custom_fonts/font = SubResource( 7 )
text = "Реклама через 3"
align = 1

[node name="Timer" type="Timer" parent="rekl"]
one_shot = true

[node name="T" type="Timer" parent="rekl"]
one_shot = true

[node name="ui" parent="." instance=ExtResource( 1 )]

[node name="Audio" type="Node2D" parent="."]
position = Vector2( 461, 741 )

[node name="Play1" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( -3, -4 )
stream = ExtResource( 10 )

[node name="Play2" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( -3, -4 )
stream = ExtResource( 3 )

[node name="Play3" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( -3, -4 )
stream = ExtResource( 8 )

[node name="Play4" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( -3, -4 )
stream = ExtResource( 2 )

[node name="Play5" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( -3, -4 )
stream = ExtResource( 9 )

[node name="heart" type="Node2D" parent="."]
position = Vector2( 424, 594 )

[node name="particl" type="CPUParticles2D" parent="heart"]
position = Vector2( 1, -2 )
emitting = false
amount = 3
one_shot = true
texture = ExtResource( 11 )
emission_shape = 1
emission_sphere_radius = 92.0
direction = Vector2( 100, 100 )
spread = 100.0
gravity = Vector2( 0, -80 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 50.0
angular_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 10.0
radial_accel_random = 1.0
tangential_accel = 10.0
tangential_accel_random = 1.0
damping = 10.0
damping_random = 1.0
scale_amount_random = 1.0
color_ramp = SubResource( 8 )
anim_speed_curve = SubResource( 9 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="TimerSafe" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="rekl/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="rekl/T" to="." method="_on_T_timeout"]
[connection signal="timeout" from="TimerSafe" to="." method="_on_TimerSafe_timeout"]
